# multithreading_mistakes

./: CMakeLists.txt  README.md
code/: main.cpp
